versions/v2.9/modules/en/pages/cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/add-ingresses.adoc
= Adding Ingresses
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/load-balancer-and-ingress-controller/add-ingresses.adoc 
:product-path: cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/add-ingresses.adoc
:description: Ingresses can be added for workloads to provide load balancing, SSL termination and host/path-based routing. Learn how to add Rancher ingress
:experimental:
ifeval::["{build-type}" != "community"]
:xref-ingress-configuration: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/ingress-configuration.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-ingress-configuration: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/load-balancer-and-ingress-controller/ingress-configuration.adoc
endif::[]

Ingresses can be added for workloads to provide load balancing, SSL termination and host/path based routing. When using ingresses in a project, you can program the ingress hostname to an external DNS by setting up a Global DNS entry.

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster that you want to add an ingress to and click *Explore*.
. Click menu:Service Discovery[Ingresses].
. Click *Create*.
. Select an existing *Namespace* from the drop-down list.
. Enter a *Name* for the ingress.
. {xref-ingress-configuration}[Create] ingress forwarding *Rules*. If any of your ingress rules handle requests for encrypted ports, add a certificate to encrypt/decrypt communications.
. *Optional:* click *Add Rule* to create additional ingress rules. For example, after you create ingress rules to direct requests for your hostname, you'll likely want to create a default backend to handle 404s.
. Click *Create* at the bottom right.

*Result:* Your ingress is added to the project. The ingress begins enforcing your ingress rules.
